k8s/chunk-worker-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: svh-chunk-worker
  name: svh-chunk-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svh-chunk-worker
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: svh-chunk-worker
    spec:
      containers:
      - image: ghcr.io/thanatadcs/scalable-video-hosting-worker:latest
        name: scalable-video-hosting-worker
        resources: {}
status: {}
