k8s/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: svh-frontend
  name: svh-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svh-frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: svh-frontend
    spec:
      containers:
      - image: ghcr.io/thanatadcs/scalable-video-hosting-frontend:latest
        name: scalable-video-hosting-frontend
        resources: {}
status: {}
