k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: svh-backend
  name: svh-backend
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: svh-backend
  type: ClusterIP
status:
  loadBalancer: {}
