k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: svh-frontend
  name: svh-frontend
spec:
  ports:
  - name: 8080-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: svh-frontend
  type: ClusterIP
status:
  loadBalancer: {}
