k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  svh-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix 
            backend:
              service:
                name:  svh-backend
                port:
                  number: 8080
